renaming kotlin test file

--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -55,6 +55,7 @@ To send and receive tbDEX messages, import the following classes:
 
   ```kotlin
     import tbdex.sdk.httpserver.TbdexHttpServer
+    import tbdex.sdk.httpserver.models.SubmitKind
     import tbdex.sdk.protocol.models.Rfq
     import tbdex.sdk.protocol.models.Quote
     import tbdex.sdk.protocol.models.Order
