--- a/site/docs/tbdex/pfi/anatomy-of-a-pfi.mdx
+++ b/site/docs/tbdex/pfi/anatomy-of-a-pfi.mdx
@@ -1,5 +1,6 @@
 ---
 title: Structuring a PFI App
+hide_title: true
 sidebar_position: 5
 ---
 
@@ -17,6 +18,8 @@ import writeOfferingsJs from '!!raw-loader!@site/snippets/testsuite-javascript/_
 import writeOfferingsKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiOverviewWriteOfferingsKt.snippet.kt'
 
 <LanguageSwitcher languages="JavaScript, Kotlin"/>
+
+# Structuring a PFI App
 
 Every PFI on the tbDEX network is required to handle its end of the responsibilities as part of each [Message Type](/docs/tbdex/message-types). The tbDEX SDK is organized in such a way that there are three key components you'll be required to implement:
 
