--- a/site/docs/tbdex/wallet/send-rfq.mdx
+++ b/site/docs/tbdex/wallet/send-rfq.mdx
@@ -8,7 +8,7 @@ After your customer selects an Offering, the next step is to send a **Request fo
 The Offering provided an estimate, but the Quote will provide a formal offer based on the financial transaction the customer is requesting as well as the payment methods provided.
 
 ## Create the RFQ
-An RFQ is a structured tbDEX message that specifies the details of the transaction your customer wishes to make. 
+An RFQ is a structured tbDEX message that specifies the details of the transaction your customer wishes to make.
 It includes information about the Offering, payment methods, and any required [verifiable credentials (VCs)](/docs/tbdex/wallet/managing-credentials).
 
 To create the message, call `Rfq.create()` passing `metadata` and `data`:
@@ -58,7 +58,7 @@ const rfq = Rfq.create({
       kind: 'BTC_WALLET_ADDRESS',   // The method of payment
       paymentDetails: {
         btcAddress: BTC_ADDRESS       // Customer's BTC wallet address
-      }           
+      }
     },
     payoutMethod: {
       kind: 'DEBIT_CARD',  // The method for receiving payout
@@ -84,10 +84,10 @@ await rfq.sign(customer); // Customer's PortableDid
 ```
 
 ## Send RFQ to PFI
-Use `TbdexHttpClient` to send the RFQ to the PFI:
+Use `TbdexHttpClient` to send the RFQ to the PFI. With an optional `replyTo` property containing a valid URI where new messages from the PFI will be sent:
 
 ```js
-const rfqResponse = await TbdexHttpClient.sendMessage({ message: rfq });
+const rfqResponse = await TbdexHttpClient.sendMessage({ message: rfq, replyTo: 'https://tbdex.io/callback' });
 ```
 
 The response contains a `status`, where success would be `202`:
