update docs with references for KMS

--- a/site/docs/tbdex/pfi/required-sdks.mdx
+++ b/site/docs/tbdex/pfi/required-sdks.mdx
@@ -15,7 +15,7 @@ import importJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__
 
 To implement and operate as a PFI, you’ll need to use the following SDKs:
 
-* **web5/dids** - To work with [Decentralized Identifiers (DID)](/docs/web5/learn/decentralized-identifiers), including creating an identity, and performing any other required cryptographic functions, you’ll need this package.
+* **web5/dids** - To work with [Decentralized Identifiers (DID)](/docs/web5/learn/decentralized-identifiers), including creating an identity, and performing any other required cryptographic functions, you’ll need this package. Check out [Key Management Service](/docs/web5/build/decentralized-identifiers/key-management) for DIDs in production environments.
 
 * **web5/credentials** - Enable verification of your customer information, including information such as customer’s identity or whether a customer is on a sanctions list. [Verifiable Credentials (VC)](/docs/web5/learn/verifiable-credentials) provide a decentralized and trustworthy way of verifying a customer.
 
