--- a/site/docs/tbdex/pfi/processing-orders.mdx
+++ b/site/docs/tbdex/pfi/processing-orders.mdx
@@ -1,6 +1,13 @@
 ---
-sidebar_position: 8
+title: Processing Orders
+sidebar_position: 9
+hide_title: true
 ---
+
+import pfiOrdersJs from '!!raw-loader!@site/snippets/testsuite-javascript/__tests__/tbdex/pfi/pfiOrdersStatusJs.snippet.js'
+import pfiOrdersKt from '!!raw-loader!@site/snippets/testsuite-kotlin/src/test/kotlin/docs/tbdex/pfi/pfiOrdersStatusKt.snippet.kt'
+
+<LanguageSwitcher languages="JavaScript, Kotlin"/>
 
 # Processing Orders
 
@@ -11,26 +18,11 @@ As described in the [Offerings API Provider](/docs/tbdex/pfi/anatomy-of-a-pfi#of
 Upon storing the `Order` message, you will want to create an initial [OrderStatus](https://github.com/TBD54566975/tbdex/tree/main/specs/protocol#orderstatus) to update the Wallet on the status of their `Order`:
 
 
-```js
-import { Order, OrderStatus } from '@tbdex/http-server'
-
-    if (message.kind == 'order') {
-      const orderStatus = OrderStatus.create(
-        {
-          metadata: {
-            from: config.did.id,
-            to: message.from,
-            exchangeId: message.exchangeId
-          },
-          data: {
-            orderStatus: 'PROCESSING'
-          }
-        }
-      )
-      await orderStatus.sign(config.did.privateKey, config.did.kid)
-      this.write({ message: orderStatus as OrderStatus})
-    }
-```
+<Shnip snippets={
+  [
+    { snippetContent: pfiOrdersJs, language: 'JavaScript'},
+    { snippetContent: pfiOrdersKt, language: 'Kotlin'}
+  ]} />
 
 
 Since the Wallet application isn't addressable, you’ll write the `OrderStatus` to your database and the Wallet will poll for `OrderStatus` data.
